--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     metadata:
       labels:
         app: grafana-agent-operator
+      annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       serviceAccountName: grafana-agent-operator
       nodeSelector:
