--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
@@ -8,6 +8,9 @@ metadata:
 spec:
   image: "{{ .Values.agent.image.organization }}/{{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag }}"
   priorityClassName: {{ .Values.priorityClassName }}
+  podMetadata:
+    annotations:
+      sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
   containers:
   - name: grafana-agent
     env:
