--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/values.yaml
@@ -69,6 +69,9 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+serviceMesh:
+  enabled: true
+
 nodeSelector:
   neonkube.io/monitor.metrics-internal: 'true'
 
