--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         name: grafana-agent-node
+      annotations:
+        sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
     spec:
       hostPID: true
       hostNetwork: true
