--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/values.yaml
@@ -24,6 +24,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+serviceMesh:
+  enabled: true
+
 podAnnotations: {}
 
 podSecurityContext: {}
@@ -36,6 +39,33 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
+
+dashboards:
+  kubernetes:
+    enabled: true
+    id: kubernetes
+    name: Kubernetes
+    prefix: k8s
+  grafana:
+    enabled: true
+    id: grafana
+    name: Grafana
+    prefix: grafana
+  minio:
+    enabled: true
+    id: minio
+    name: Minio
+    prefix: minio
+  kiali:
+    enabled: true
+    id: kiali
+    name: Kiali
+    prefix: kiali
+  harbor:
+    enabled: true
+    id: harbor
+    name: Harbor
+    prefix: harbor
 
 service:
   type: ClusterIP
