--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/config-env.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/config-env.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "neon-dashboard.fullname" . }}
+  name: {{ include "neon-dashboard.fullname" . }}-env
   labels:
     {{- include "neon-dashboard.labels" . | nindent 4 }}
 data:
