--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -68,7 +68,37 @@
 		<None Remove="Resources\Helm\cortex\templates\service-headless.yaml" />
 		<None Remove="Resources\Helm\grafana-agent\templates\grafana-dashboard.yaml" />
 		<None Remove="Resources\Helm\grafana-agent\templates\neon-dashboard.yaml" />
+		<None Remove="Resources\Helm\grafana\templates\datasource-loki.yaml" />
+		<None Remove="Resources\Helm\grafana\templates\datasource-mimir.yaml" />
 		<None Remove="Resources\Helm\kube-state-metrics\templates\grafana-dashboard.yaml" />
+		<None Remove="Resources\Helm\memcached\templates\dashboard.yaml" />
+		<None Remove="Resources\Helm\memcached\templates\_affinities.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_capabilities.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_images.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_labels.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_names.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_tplvalues.tpl" />
+		<None Remove="Resources\Helm\memcached\templates\_warnings.tpl" />
+		<None Remove="Resources\Helm\mimir\templates\alertmanager\alertmanager-dashboard-resources.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\alertmanager\alertmanager-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\compactor\compactor-dashboard-resources.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\compactor\compactor-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\config-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\overrides-exporter\overrides-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\querier\queries-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\reads-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\reads-networking-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\reads-resources-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\rollout-progress-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\ruler\ruler-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\scaling-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\slow-queries-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\store-gateway\object-storage-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\tenants-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\top-tenants-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\writes-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\writes-networking-dashboard.yaml" />
+		<None Remove="Resources\Helm\mimir\templates\writes-resources-dashboard.yaml" />
 		<None Remove="Resources\Helm\minio\templates\console-config-env.yaml" />
 		<None Remove="Resources\Helm\minio\templates\grafana-dashboard.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
@@ -78,6 +108,7 @@
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\config-env.yaml" />
+		<None Remove="Resources\Helm\neon-dashboard\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\.helmignore" />
 		<None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\configmap.yaml" />
